--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,20 +14,19 @@ services:
       PGADMIN_DEFAULT_EMAIL: nantahkl@gmail.com
       PGADMIN_DEFAULT_PASSWORD: cards
       PGADMIN_DISABLE_POSTFIX: 1
-  api:
+  cards-api:
     build:
-      context: ./api
+      context: ./cards/api
       dockerfile: ./Dockerfile.dev
     ports:
       - "8000:8000"
     volumes:
-      - ./api:/app
+      - ./cards/api:/app
     environment:
       DATABASE_URL: postgresql://cards:cards@db/cards
       WAIT_HOSTS: db:5432
       PORT: 8000
       # SIGNING_KEY: 855hj26pabafb2d4d57f5be921a487480f21f5e48acbc32a4d014147bfd96115d7ddbe8f26219rsds227b343d7f4b9p00p9dd1249e1ec892baf73572353666a97e
-
   db:
     image: postgres:14.5-bullseye
     volumes:
