--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,22 +5,22 @@ stages:
 services:
   - docker:dind
 
-build-decks-image:
+build-cards-image:
   stage: build
   image: docker:git
   variables:
-    GITLAB_IMAGE: ${CI_REGISTRY_IMAGE}/decks_image
+    GITLAB_IMAGE: ${CI_REGISTRY_IMAGE}/cards_image
   before_script:
     # $CI_JOB_TOKEN is variable automatically added by Gitlab: see https://docs.gitlab.com/ee/ci/variables/predefined_variables.html#variables-reference
     - echo $CI_JOB_TOKEN | docker login -u gitlab-ci-token registry.gitlab.com --password-stdin
   script:
-    - docker build --tag $GITLAB_IMAGE:latest decks
+    - docker build --tag $GITLAB_IMAGE:latest api
     - docker push $GITLAB_IMAGE:latest
   only:
     - main
 
 
-deploy-decks-image:
+deploy-cards-image:
   stage: deploy
   image: registry.gitlab.com/galvanize-inc/foss/glv-cloud-cli:latest
   script:
