--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ build_api:
   services:
     - docker:dind
   script:
-    - docker build -t api:latest ./api
+    - docker build -t api:latest -f ./api/Dockerfile.dev ./api
   artifacts:
     paths:
       - api/Dockerfile.dev
