--- a/ghi/package.json
+++ b/ghi/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@galvanize-inc/jwtdown-for-react": "^0.2.1",
+    "@mui/material": "^5.14.18",
     "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
