--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,7 +7,8 @@ services:
       context: ./api
       dockerfile: Dockerfile.dev
     environment:
-      CORS_HOST: http://localhost:3000
+      # CORS_HOST: http://localhost:3000
+      CORS_HOST: http://192.168.1.220:3000
       DATABASE_URL: mongodb://root:password@mongo
       DATABASE_NAME: cards
       WAIT_HOSTS: mongo:27017
@@ -42,3 +43,5 @@ services:
       HOST: "0.0.0.0"
       PUBLIC_URL: http://localhost:3000
       REACT_APP_FASTAPI_SERVICE_API_HOST: http://localhost:8000
+      # PUBLIC_URL: http://192.168.1.220:3000
+      # REACT_APP_FASTAPI_SERVICE_API_HOST: http://192.168.1.220:8000
