--- a/ghi/package.json
+++ b/ghi/package.json
@@ -15,6 +15,10 @@
     "bootstrap": "^5.2.3",
     "file-saver": "^2.0.5",
     "gsap": "^3.11.4",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.10.1",
+    "image-js": "^0.35.5",
+    "jspdf": "^2.5.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
