--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,9 +7,9 @@ services:
       context: ./api
       dockerfile: Dockerfile.dev
     environment:
-      CORS_HOST: http://13.57.107.204:3000
-      # CORS_HOST: http://localhost:3000
+      CORS_HOST: http://localhost:3000
       # CORS_HOST: http://192.168.1.220:3000
+      # CORS_HOST: http://13.57.107.204:3000
       DATABASE_URL: mongodb://root:password@mongo
       DATABASE_NAME: cards
       WAIT_HOSTS: mongo:27017
@@ -42,7 +42,9 @@ services:
       HOST_OS: ${OS}
       NODE_ENV: development
       HOST: "0.0.0.0"
-      PUBLIC_URL: http://13.57.107.204:3000
-      REACT_APP_FASTAPI_SERVICE_API_HOST: http://13.57.107.204:8000
+      PUBLIC_URL: http://localhost:3000
+      REACT_APP_FASTAPI_SERVICE_API_HOST: http://localhost:8000
       # PUBLIC_URL: http://192.168.1.220:3000
       # REACT_APP_FASTAPI_SERVICE_API_HOST: http://192.168.1.220:8000
+      # PUBLIC_URL: http://13.57.107.204:3000
+      # REACT_APP_FASTAPI_SERVICE_API_HOST: http://13.57.107.204:8000
